fix: apply new spacing to decklist tags when no meta is present

--- a/src/components/arkhamdb-decklists/arkhamdb-decklist-result.module.css
+++ b/src/components/arkhamdb-decklists/arkhamdb-decklist-result.module.css
@@ -29,3 +29,7 @@
 .decklist {
   padding: 0.5rem;
 }
+
+.decklist-meta-standalone {
+  margin-bottom: 0.5rem;
+}
